rss publishing, git update, stylus

--- a/views/pages/article.jade
+++ b/views/pages/article.jade
@@ -1,6 +1,8 @@
-article.post
-  header
-    h1 #{title}
-    span.date #{date}
-  section.content
-    #{content}
+extends ../layout
+block content
+  article.post
+    header
+      h1 #{title}
+      span.date #{date}
+    section.content
+      #{content}
