--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,12 @@
 html
   head
-    h1 My Site - #{title}
+    link(rel="stylesheet", href="stylesheets/reset.css")
+    link(rel="stylesheet", href="stylesheets/hive.css")
     block scripts
   body
-    block content
-    block foot
-      #footer
-        p some footer content
+    h1 Holy cows
+    .container
+      block content
+      block foot
+        #footer
+          p some footer content
