routing, ignore template file

--- a/views/pages/article.jade
+++ b/views/pages/article.jade
@@ -4,5 +4,4 @@ block content
     header
       h1 #{title}
       span.date #{date}
-    section.content
-      #{content}
+    section.content!=content
