--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 html
   head
-    link(rel="stylesheet", href="stylesheets/reset.css")
-    link(rel="stylesheet", href="stylesheets/hive.css")
+    link(rel="stylesheet", href="/stylesheets/reset.css")
+    link(rel="stylesheet", href="/stylesheets/hive.css")
     block scripts
   body
     h1 Holy cows
