--- a/views/stylesheets/hive.styl
+++ b/views/stylesheets/hive.styl
@@ -19,7 +19,46 @@ h3
   font-size 3em
   color #333
   margin-top 1em
+  line-height 0.85em
   text-align center
+
+/* author credits */
+h6 {
+  font-size: 1.2em;
+  font-weight: normal;
+  line-height: 1.3em;
+  color: #666;
+  font-family: acta-display, Georgia, Times, serif;
+  margin: 1em 0 .5em 0;
+  letter-spacing: .1em;
+  margin-bottom: 1em;
+  text-align: center;
+  -webkit-opacity: 0.30;
+  -moz-opacity: 0.30;
+  opacity: 0.30;
+  -webkit-transition: opacity 3s linear;
+  -moz-transition: opacity 3s linear;
+  -ms-transition: opacity 3s linear;
+  -o-transition: opacity 3s linear;
+  transition: opacity 3s linear;
+}
+
+/* fades author credit back in on hover */
+h6:hover {
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  -o-transition: all 2s ease;
+  transition: all 2s ease;
+}
+
+h6 strong {
+  color: #56a49f;
+  font-weight: bold;
+}
 
 a, a:visited
   color #333
@@ -32,3 +71,35 @@ a:hover
   padding 0 1em
   max-width 42.5em
   margin auto
+
+article
+  line-height: 1.635em;
+  margin: .7em 0 1em 0;
+  font-family: ff-meta-serif-web-pro, Georgia, Cambria, 'Times New Roman', Times, serif;
+  color: #333;
+  -webkit-font-smoothing: antialiased;
+  font-size: 1.3em;
+
+.post
+  h1
+    color #333
+    margin-top 1.5em
+    font-size 1.5em
+  h2
+    font-size 1.25em
+    color #444
+    margin-top 1.5em
+  em
+    font-style italic
+  strong
+    font-weight bold
+  .content a
+    text-decoration underline
+  blockquote
+    border-left 1px solid afa5a5
+    margin 1.8em .8em
+    padding 0 1em 0 1em
+    color 444
+  li
+    line-height 1em
+    padding .1
