--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -6,7 +6,7 @@ block content
         article.post
           header
             h3 
-              a(href=article.url) #{article.url}#{article.title}
+              a(href=article.url) #{article.title}
             span.date #{article.date}
           section.content!=article.content
           div.more 
